fix: Spacing bug and required fields
The user W cannot enter an empty name, and the empty name now does not mess up the page.

- fixed the spacing with a fixed height title.
-required name field

fixes #101

--- a/mydjangoproject/muninn/static/muninn/styles.css
+++ b/mydjangoproject/muninn/static/muninn/styles.css
@@ -3099,4 +3099,7 @@
             padding: 0;
             margin: 2px;
         }
+        .fixheight{
+            height:50px;
+        }
     }
